# store

./: Cargo.toml  Dockerfile  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
scripts/: prepare-image-context.sh  prepare-local.sh
specs/: electronics.md  emissions_certification.md  sigma-spec.md
src/: api.rs  auth_links.rs  cart.rs  catalog.rs  config.rs  identity.rs  lib.rs  main.rs  model.rs  product_url.rs  specs.rs  store.rs  templates.rs  web.rs
src/api/: error_body.rs  storefront_item.rs
src/cart/: cart_detail.rs  cart_error.rs  cart_line.rs  cart_line_detail.rs
src/model/: create_listing.rs  listing.rs  listing_form.rs  update_listing.rs
src/store/: listings_store.rs  store_error.rs
src/templates/: admin_page_input.rs  admin_row.rs  admin_template.rs  catalog_sku_ref.rs  form_template.rs  form_values.rs  product_detail.rs  product_template.rs  storefront_row.rs  storefront_template.rs
templates/: admin.html  form.html  index.html  nav_sign_in.html  nav_store.html  order.html  order_confirm.html  product.html
